[gd_scene load_steps=4 format=3 uid="uid://cygia5p0aljx0"]

[ext_resource type="Texture2D" uid="uid://cjptps0q8fkjs" path="res://assets/graphics/toiletpaper.png" id="1_h4iex"]
[ext_resource type="Script" uid="uid://b15eenk6whqvo" path="res://toiletpaper.gd" id="1_pjdqh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pjdqh"]
size = Vector2(32.5, 42.5)

[node name="Toiletpaper" type="Area2D"]
script = ExtResource("1_pjdqh")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -16.0
offset_top = -48.0
offset_right = 24.0
offset_bottom = -8.0
scale = Vector2(0.400001, 0.400001)
texture = ExtResource("1_h4iex")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7, -29)
scale = Vector2(0.400001, 0.400001)
shape = SubResource("RectangleShape2D_pjdqh")

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
